# fielder_gz

./: README.md  package.xml
config/: gz_bridge.yaml  localize_params_online_async.yaml
launch/: display.launch.py  fielder_bringup.launch.py  fielder_sim.launch.py  localization.launch.py  mapping.launch.py  navigation.launch.py
ros2_fielder_sim-master/: CMakeLists.txt
ros2_fielder_sim-master/config/: display.rviz2
ros2_fielder_sim-master/launch/: localization.launch.py  mapping.launch.py  navigation.launch.py
ros2_fielder_sim-master/map/: map_save.pgm  map_save.yaml  map_serial.data
ros2_fielder_sim-master/urdf/: fielder.xacro  gazebo_visual.xacro
ros2_fielder_sim-master/world/: empty.world
urdf/: fielder_chasis.xacro  gazebo_control.xacro  gazebo_fielder.xacro  gazebo_lidar.xacro  gazebo_visual.xacro
