<?xml version="1.0"?>
<package format="3">
  <name>fielder_gz</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="rsbdev@todo.todo">rsbdev</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>nav2_minimal_tb4_sim</exec_depend>
  <exec_depend>nav2_minimal_tb3_sim</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
